<resources>
    <string name="app_name">花瓣</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_title_latest">最新</string>
    <string name="nav_title_following">关注</string>
    <string name="nav_title_popular">热门</string>
    <string name="nav_title_discover">发现</string>
    <string name="nav_title_settings">设置</string>
    <string name="nav_title_about">关于</string>
    <string name="nav_title_logout">退出登录</string>

    <string name="msg_loading">正在加载...</string>
    <string name="msg_load_failed_click_retry">加载失败!</string>
    <string name="msg_logout_warning">退出登录?</string>
    <string name="msg_logout_success">退出登录成功</string>
    <string name="msg_count_default">0</string>

    <string name="msg_nav_login_hint">点我登录</string>
    <string name="collection">采集</string>
    <string name="board">画板</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="search">搜索</string>
    <string name="refresh">刷新</string>
    <string name="settings">设置</string>

    <string name="msg_login_hint">请先登录</string>
    <string name="msg_go_login">去登录</string>
    <string name="msg_petal_slogan">陪你做生活的设计师</string>
    <string name="msg_hint_user_account">邮箱/手机号</string>
    <string name="msg_hint_password">密码</string>
    <string name="msg_login">登录</string>
    <string name="msg_logining">正在登录...</string>
    <string name="msg_skip_login">跳过登录</string>
    <string name="msg_cannot_be_empty">此栏不能为空</string>
    <string name="msg_password_illegal">密码至少6位！</string>
    <string name="msg_login_failed">用户名或密码错误</string>

    <string name="register">注册</string>
    <string name="msg_register_by_phone">手机注册</string>
    <string name="msg_hint_phone_register">请输入您的手机号码</string>
    <string name="msg_invalid_phone_number">手机号码无效</string>
    <string name="msg_register_next">下一步</string>
    <string name="msg_confirm_user_info">验证你的手机号并完善账号</string>
    <string name="msg_message_captcha">短信验证码</string>
    <string name="format_send_again">再次发送(%d)</string>
    <string name="msg_send_again">再次发送</string>
    <string name="msg_password_edit_hint">密码（大于 6 位的字母和数字）</string>
    <string name="msg_password_confirm_hint">确认密码</string>
    <string name="msg_user_name_hint">昵称</string>
    <string name="msg_captcha_is_empty">验证码不能为空</string>
    <string name="msg_user_name_is_empty">用户名不能为空</string>
    <string name="msg_user_name_invalid">昵称不能包含@、#、$ 以及空格等特殊字符</string>
    <string name="msg_password_is_empty">密码不能为空</string>
    <string name="msg_password_invalid">密码长度必须为6-32个字符</string>
    <string name="msg_password_different">两次输入的密码不一致</string>
    <string name="msg_register_success">注册成功</string>

    <string name="msg_network_unavailable">没有网络连接，请检查网络设置</string>
    <string name="msg_check_and_retry">网络错误，请检查网络设置或稍后重试</string>
    <string name="msg_error_http_exception">服务暂不可用</string>
    <string name="msg_error_io_exception">连接失败</string>
    <string name="msg_error_json_syntax_exception">数据出错</string>
    <string name="msg_error_common_exception">请求失败</string>

    <string name="pin_transition_name">pin_transition</string>
    <string name="avatar_transition_name">avatar_transition</string>

    <string name="format_collection_count">%s 采集</string>
    <string name="format_like_count">%d 喜欢</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="msg_collect_to">采集到</string>
    <string name="msg_related_recommend">相关推荐</string>
    <string name="no_more_data">沒有更多了</string>
    <string name="format_collection_exist">这张图片已经在你的 %s 画板里了</string>
    <string name="msg_collect_still">仍要采集</string>
    <string name="msg_collect_des_hint">文字描述：</string>
    <string name="msg_collect_des">采集描述</string>
    <string name="msg_collect_des_with_colon">采集描述：</string>
    <string name="msg_collect_to_with_colon">采集到：</string>
    <string name="msg_cancel">取消</string>
    <string name="msg_confirm">确定</string>
    <string name="format_collect_success">成功采集到 %s 画板中</string>
    <string name="msg_delete_waring">确定删除？</string>
    <string name="msg_delete_success">已删除该采集</string>
    <string name="board_with_colon">画板：</string>
    <string name="msg_download_pin">下载</string>
    <string name="msg_permission_storage_denied">没有权限将无法下载图片</string>
    <string name="msg_permission_storage_not_enabled">你关闭了 sd 卡权限，无法下载图片</string>
    <string name="msg_go_to_settings">去打开</string>

    <string name="like">喜欢</string>
    <string name="format_board_count">%d 画板</string>
    <string name="format_following_count">%d 关注</string>
    <string name="format_follower_count">%d 粉丝</string>
    <string name="followed">已关注</string>
    <string name="msg_empty_user_about">暂无个人介绍</string>
    <string name="msg_board_name_hint">名称:</string>
    <string name="msg_board_des">画板描述:</string>
    <string name="msg_category">分类：</string>
    <string name="msg_input_board_name">请输入画板名称</string>
    <string name="msg_delete_board">删除画板</string>
    <string name="msg_edit_success">修改成功</string>
    <string name="msg_delete_board_success">已删除该画板</string>
    <string name="msg_input_board_des">请输入画板描述</string>
    <string name="msg_new_board">新建画板</string>
    <string name="msg_create_board_success">画板创建成功</string>
    <string name="msg_board_belongs_to">来自</string>

    <string name="msg_clear_history">清空搜索历史</string>
    <string name="search_actv_hint">搜索采集、画板、用户</string>
    <string name="msg_search_history">搜索历史</string>
    <string name="msg_scan_by_category">分类浏览</string>
    <string name="msg_empty_search_history">没有搜索历史</string>

    <string name="user">用户</string>
    <string name="format_user_count">%d 用户</string>

    <string name="boards_recomended">推荐的画板</string>
    <string name="users_recomended">推荐的用户</string>

    <string name="new_collect">添加采集</string>
    <string name="choose_picture">选择图片</string>
    <string name="msg_upload_failed">上传图片失败，请稍后重试</string>
    <string name="msg_none_board">你还没有任何画板,先去创建个画板吧</string>
    <string name="msg_create_board_tip">去创建</string>
</resources>
