<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialog_margin_default"
    android:paddingEnd="@dimen/dialog_margin_default">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/msg_board_name_hint"
        android:textSize="@dimen/text_size_16sp"/>

    <EditText
        android:id="@+id/edit_text_dialog_board_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/msg_board_des"
        android:textSize="@dimen/text_size_16sp"/>

    <EditText
        android:id="@+id/edit_text_dialog_board_edit_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:maxLines="4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/msg_category"
        android:textSize="@dimen/text_size_16sp"/>

    <Spinner
        android:id="@+id/spinner_dialog_board_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/triple_activity_default_margin"
        style="@style/SpinderUnderLined"/>

</LinearLayout>