<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_petal_logo_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_petal_slogan"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:maxLines="1"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <AutoCompleteTextView
                android:id="@+id/textview_user_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_hint_user_account"
                android:inputType="phone|textEmailAddress"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edittext_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/msg_login"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"/>

    </LinearLayout>


</ScrollView>