<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/bg_nav_header"
    android:orientation="vertical"
    android:paddingBottom="@dimen/half_activity_default_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/ll_drawer_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/drawer_avatar_margin_left"
        android:padding="@dimen/half_activity_default_margin"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img_drawer_avatar"
            android:layout_width="@dimen/drawer_avatar_size"
            android:layout_height="@dimen/drawer_avatar_size"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_avatar_24dp"
            android:visibility="visible"
            fresco:failureImage="@drawable/ic_broken_image_grey_700_48dp"
            fresco:failureImageScaleType="centerInside"/>

        <TextView
            android:id="@+id/tv_drawer_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/msg_nav_login_hint"
            android:textColor="@color/grey_100"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/quarter_activity_default_margin"
        android:layout_marginRight="@dimen/quarter_activity_default_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_drawer_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/grey_100"
                android:textSize="@dimen/text_size_16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection"
                android:textColor="@color/grey_300"
                android:textSize="@dimen/text_size_16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_drawer_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/grey_100"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board"
                android:textColor="@color/grey_300"
                android:textSize="@dimen/text_size_16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_drawer_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/grey_100"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/grey_300"
                android:textSize="@dimen/text_size_16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_drawer_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/grey_100"
                android:textSize="@dimen/text_size_16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textColor="@color/grey_300"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>