<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="2dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <AutoCompleteTextView
                android:id="@+id/actv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/search_actv_hint"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:popupBackground="@color/white"
                android:theme="@style/AutoCompleteTextViewCustom" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="clip_vertical"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/msg_search_history"
                    android:textColor="@color/secondary_text" />

                <ImageButton
                    android:id="@+id/imgbtn_clear_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/spacing_normal"
                    android:foreground="?attr/selectableItemBackgroundBorderless"/>

            </LinearLayout>

            <com.glooory.petal.app.widget.FlowLayout
                android:id="@+id/flow_layout_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/quarter_activity_default_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:text="@string/msg_scan_by_category"
                android:textColor="@color/secondary_text" />

            <com.glooory.petal.app.widget.FlowLayout
                android:id="@+id/flow_layout_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>